--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <h3>Free Fire ID #001</h3>
     <p>เลเวล 60 | ตัวละครครบ</p>
     <span class="price">฿350</span>
-    <a class="btn" href="#">ติดต่อซื้อ</a>
+    <a class="btn" href="#"><a class="btn" href="https://www.facebook.com/share/1EwpuwhLKQ/?mibextid=wwXIfr">
+ติดต่อซื้อ
+</a>ติดต่อซื้อ</a>
   </div>
 </section>
 
