--- a/index.html
+++ b/index.html
@@ -2,53 +2,28 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mobile Shop | Free Fire</title>
-  <style>
-    body{margin:0;font-family:Arial;background:#fff;color:#000}
-    header,footer{background:#000;color:#fff;text-align:center;padding:20px}
-    .products{display:flex;flex-wrap:wrap;gap:15px;justify-content:center;padding:20px}
-    .card{border:1px solid #000;border-radius:10px;padding:15px;width:260px}
-    .price{font-size:20px;font-weight:bold;margin:10px 0}
-    .btn{display:block;text-align:center;background:#000;color:#fff;padding:10px;border-radius:6px;text-decoration:none}
-  </style>
+  <title>Free Fire ID Shop</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <h1>Mobile Shop</h1>
-  <p>ร้านขายไอดีเกม Free Fire</p>
+  <h1>ร้านขายไอดี Free Fire</h1>
+  <p>ติดต่อซื้อได้ทาง Facebook</p>
 </header>
 
-<section class="products">
-  
-<div class="card">
-  
 <section class="products">
 
   <div class="card">
     <h3>Free Fire ID #001</h3>
     <p>เลเวล 60 | ตัวละครครบ</p>
-
     <span class="price">฿350</span>
-
-    <a class="btn" href="https://www.facebook.com/share/1EwpuwhLKQ/?mibextid=wwXIfr">
+    <a class="btn" href="https://www.facebook.com/" target="_blank">
       ติดต่อซื้อ
     </a>
   </div>
 
 </section>
-
-  
-
-  
-
-
-
-
-<footer>
-  <p>© Mobile Shop</p>
-</footer>
 
 </body>
 </html>
